tests/golden/invalid/builtins-01.rego.stderr
fregot (typecheck error):
  "builtins-01.rego" (line 5, column 3):
  Subtype error:

    5|   all({"foo": true, "bar": false, "baz": 100})
         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

  Cannot use type object{
    "bar": boolean,
    "foo": boolean,
    "baz": number
  } as set{boolean}|object{any: boolean}|array{number: boolean}

fregot (typecheck error):
  "builtins-01.rego" (line 9, column 3):
  Subtype error:

    9|   any({"foo": true, "bar": false, "baz": 100})
         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

  Cannot use type object{
    "bar": boolean,
    "foo": boolean,
    "baz": number
  } as set{boolean}|object{any: boolean}|array{number: boolean}
